# Zephyr-ST

./: .gitignore  CMakeLists.txt  prj.conf
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yml
boards/: stm32f746g_disco.overlay  stm32l432kc.overlay
lib/led/: CMakeLists.txt
lib/led/include/: led.h
lib/led/src/: led.c
src/: custom_adder.s  main.c
